# TaskGuard

./: .gitignore  404.html  AGENTIC_AI_TASKGUARD_GUIDE.md  AI_IMPORT_MD_GUIDE.md  CAUSALITY_AWARE_UPGRADE.md  CAUSALITY_CHAIN_INTEGRITY_ISSUES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS_CHANGELOG.md  EFFICIENCY_COMMANDS.md  FUTURE_DEVELOPMENT_ANALYSIS.md  GITHUB_CAUSALITY_CHAIN.md  GITHUB_INTEGRATION_GUIDE.md  GITHUB_SETUP_GUIDE.md  GITHUB_SYNC_QUICKSTART.md  INSTALL.md  LICENSE  MOBILE_COMMANDS.md  PR2_GITHUB_COMPATIBILITY_ANALYSIS.md  README.md  READTHEDOCS_SETUP.md  SESSION_HANDOFF_GITHUB_VERIFICATION.md  index.html  mkdocs.yml  security-report-comprehensive.md  security-report.md  setup-readthedocs.sh  sitemap.xml  taskguard_design.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.taskguard/: config.toml  github-mapping.json  github.toml
api-reference/commands/: index.html
api-reference/configuration/: index.html
api-reference/library-api/: index.html
api-reference/task-file-format/: index.html
changelog/: index.html
contributing/code-standards/: index.html
contributing/development-setup/: index.html
contributing/testing/: index.html
core-concepts/execution-model/: index.html
core-concepts/state-management/: index.html
core-concepts/task-structure/: index.html
docs/: changelog.md  context-engineering-comparison.md  effective-context-engineering-for-ai-agents.txt  faq.md  index.md  licensing.md
docs/api-reference/: commands.md  configuration.md  library-api.md  task-file-format.md
docs/contributing/: code-standards.md  development-setup.md  testing.md
docs/core-concepts/: execution-model.md  state-management.md  task-structure.md
docs/features/: advanced-config.md  ai-integration.md  dependencies.md  git-sync.md  quality-analysis.md  task-management.md
docs/getting-started/: first-task.md  installation.md  prerequisites.md
docs/usage-examples/: common-workflows.md  integration-patterns.md  troubleshooting.md
faq/: index.html
features/advanced-config/: index.html
features/ai-integration/: index.html
features/dependencies/: index.html
features/git-sync/: index.html
features/quality-analysis/: index.html
features/task-management/: index.html
getting-started/first-task/: index.html
getting-started/installation/: index.html
getting-started/prerequisites/: index.html
scripts/: install-linux.sh  install-macos.sh  install-termux.sh  install-windows.ps1  install-wsl.sh
search/: search_index.json
src/: analysis.rs  config.rs  git.rs  lib.rs  main.rs  task.rs  templates.rs
src/commands/: ai.rs  archive.rs  clean.rs  compact.rs  create.rs  import_md.rs  init.rs  lint.rs  list.rs  mod.rs  restore.rs  stats.rs  sync.rs  update.rs  validate.rs
src/github/: client.rs  config.rs  mapper.rs  mod.rs  mutations.rs  queries.rs  setup.rs  types.rs
tasks/backend/: backend-001.md  backend-002.md  backend-003.md  backend-004.md  backend-006.md  backend-007.md  backend-010.md  backend-012.md  backend-014.md  backend-015.md  backend-016.md  backend-017.md  backend-018.md  backend-020.md  backend-021.md  backend-022.md  backend-025.md  backend-026.md  backend-027.md  backend-028.md  backend-029.md  backend-030.md
tasks/bugs/: bugs-001.md
tasks/causality/: causality-001.md  causality-002.md  causality-003.md  causality-004.md  causality-005.md  (+24 more)
tests/: ai_integration_tests.rs  cli_integration_tests.rs  end_to_end_tests.rs  git_analysis_tests.rs  github_integration_test.rs  github_mapper_test.rs  github_module_test.rs  import_md_tests.rs  lint_analysis_tests.rs  security_tests.rs
(+96 files in other folders)
