[package]
name = "taskguard"
version = "0.4.0"
edition = "2024"
description = "AI-ready local task management with Git integration and GitHub sync"
license = "MIT"

[[bin]]
name = "taskguard"
path = "src/main.rs"

[lib]
name = "taskguard"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.4"
git2 = "0.18"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols