[package]
name = "taskguard"
version = "0.4.2"
edition = "2024"
description = "AI-ready local task management with Git integration and GitHub sync"
license = "MIT"

[[bin]]
name = "taskguard"
path = "src/main.rs"

[lib]
name = "taskguard"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.4"
git2 = "0.18"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
# ============================================================================
# Lints - Strict mode: fail on warnings and clippy
# ============================================================================
[lints.rust]
dead_code = "warn"
unused = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
derivable_impls = "allow"
should_implement_trait = "allow"
needless_range_loop = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"

case_sensitive_file_extension_comparisons = "allow"
empty_line_after_doc_comments = "allow"
ptr_arg = "allow"
unnecessary_wraps = "allow"
